--- a/_includes/index_head.html
+++ b/_includes/index_head.html
@@ -11,16 +11,16 @@
   <link rel="shortcut icon" href="{{ "/static/assets/img/favicon.ico" | prepend: site.baseurl }}">
 
   <!-- Main CSS -->
-  <link href="{{ "/static/assets/app-20190617.min.css" | prepend: site.baseurl }}" rel="stylesheet">
-  <link href="{{ "/static/css/custom.css" | prepend: site.baseurl }}" rel="stylesheet">
+  <link async href="{{ "/static/assets/app-20190617.min.css" | prepend: site.baseurl }}" rel="stylesheet">
+  <link async href="{{ "/static/css/custom.css" | prepend: site.baseurl }}" rel="stylesheet">
 
   <!-- Main scripts -->
-  <script src="{{ "/static/assets/app-20190617.min.js" | prepend: site.baseurl }}"></script>
+  <script async defer src="{{ "/static/assets/app-20190617.min.js" | prepend: site.baseurl }}"></script>
   {% if site.data.index.projects %}
   <script async defer src="{{ "/static/js/github_api.min.js" | prepend: site.baseurl }}"></script>
   {% endif %}
   {% if site.data.index.language %}
-  <script src="{{"/static/assets/i18-20190617.min.js"| prepend: site.baseurl }}"></script>
+  <script async defer src="{{"/static/assets/i18-20190617.min.js"| prepend: site.baseurl }}"></script>
   {% endif %}
 
   <!-- Google AdSense -->
