--- a/_includes/index_head.html
+++ b/_includes/index_head.html
@@ -15,12 +15,12 @@
   <link async href="{{ "/static/css/custom.css" | prepend: site.baseurl }}" rel="stylesheet">
 
   <!-- Main scripts -->
-  <script async src="{{ "/static/assets/app-20190617.min.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/static/assets/app-20190617.min.js" | prepend: site.baseurl }}"></script>
   {% if site.data.index.projects %}
   <script async defer src="{{ "/static/js/github_api.min.js" | prepend: site.baseurl }}"></script>
   {% endif %}
   {% if site.data.index.language %}
-  <script async src="{{"/static/assets/i18-20190617.min.js"| prepend: site.baseurl }}"></script>
+  <script src="{{"/static/assets/i18-20190617.min.js"| prepend: site.baseurl }}"></script>
   {% endif %}
 
   <!-- Google AdSense -->
