--- a/_includes/index_head.html
+++ b/_includes/index_head.html
@@ -8,11 +8,7 @@
   <meta name="author" content="{{ site.author.name }}">
   <title>{{ site.title }}</title>
   <!-- favicon -->
-  <link rel="shortcut icon" href="{{ "/static/assets/img/favicon.ico" | prepend: site.baseurl }}">
-
-  <!-- Main CSS -->
-  <link async href="{{ "/static/assets/app-20190617.min.css" | prepend: site.baseurl }}" rel="stylesheet">
-  <link async href="{{ "/static/css/custom.css" | prepend: site.baseurl }}" rel="stylesheet">
+  <link async rel="shortcut icon" href="{{ "/static/assets/img/favicon.ico" | prepend: site.baseurl }}">
 
   <!-- Main scripts -->
   <script src="{{ "/static/assets/app-20190617.min.js" | prepend: site.baseurl }}"></script>
