--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,10 @@ layout: compress
 
 <body id="page-top" class="landing-page">
 
+    <!-- Main CSS -->
+    <link async href="{{ "/static/assets/app-20190617.min.css" | prepend: site.baseurl }}" rel="stylesheet">
+    <link async href="{{ "/static/css/custom.css" | prepend: site.baseurl }}" rel="stylesheet">
+
     {% if page.title != 'index' %}
         {% include blog_header.html %}
     {% endif %}
