--- a/_includes/index_head.html
+++ b/_includes/index_head.html
@@ -8,6 +8,9 @@
   <meta name="author" content="{{ site.author.name }}">
   <title>{{ site.title }}</title>
 
+  <!-- favicon -->
+  <link async rel="shortcut icon" href="{{ "/static/assets/img/favicon.ico" | prepend: site.baseurl }}">
+
   <!-- Main scripts -->
   <script src="{{ "/static/assets/app-20190617.min.js" | prepend: site.baseurl }}"></script>
   {% if site.data.index.projects %}
