--- a/_includes/index_head.html
+++ b/_includes/index_head.html
@@ -9,7 +9,11 @@
   <title>{{ site.title }}</title>
 
   <!-- favicon -->
-  <link async rel="shortcut icon" href="{{ "/static/assets/img/favicon.ico" | prepend: site.baseurl }}">
+  <link rel="shortcut icon" href="{{ "/static/assets/img/favicon.ico" | prepend: site.baseurl }}">
+
+  <!-- Main CSS -->
+  <link href="{{ "/static/assets/app-20190617.min.css" | prepend: site.baseurl }}" rel="stylesheet">
+  <link href="{{ "/static/css/custom.css" | prepend: site.baseurl }}" rel="stylesheet">
 
   <!-- Main scripts -->
   <script src="{{ "/static/assets/app-20190617.min.js" | prepend: site.baseurl }}"></script>
