--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -20,7 +20,9 @@
         <!-- avatar -->
         <div class="col-xs-4">
             <div class="team-member wow zoomIn">
-                <img data-src="{{ site.author.avatar | prepend: site.baseurl }}" height="160px" width="144px" class="lozad img-responsive img-circle" alt="avatar">
+                <div id="avatar" style="height: 160px;">
+                    <img data-src="{{ site.author.avatar | prepend: site.baseurl }}" height="160px" width="144px" class="lozad img-responsive img-circle" alt="avatar">
+                </div>
                 <h4><span class="navy">{{ site.author.first_name }}</span> {{ site.author.last_name }}</h4>
                 <ul class="list-inline social-icon">
                     {% if site.author.github_username %}
