--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -21,7 +21,7 @@
         <div class="col-xs-4">
             <div class="team-member wow zoomIn">
                 <div id="avatar" style="height: 160px;">
-                    <img data-src="{{ site.author.avatar | prepend: site.baseurl }}" height="160px" width="144px" class="lozad img-responsive img-circle" alt="avatar">
+                    <img data-src="{{ site.author.avatar | prepend: site.baseurl }}" class="lozad img-responsive img-circle" alt="avatar">
                 </div>
                 <h4><span class="navy">{{ site.author.first_name }}</span> {{ site.author.last_name }}</h4>
                 <ul class="list-inline social-icon">
