--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2524,6 +2524,7 @@ body {
     z-index: 10;
   }
   .carousel .item {
+    height: 0;
     background-color: #777;
   }
   .carousel-inner > .item > img {
