--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2663,6 +2663,7 @@ body {
     background-image: url(../assets/img/landing/avatar_all.png);
   }
   .contact {
+    width: auto;
     background-image: url(../assets/img/landing/word_map.png);
     background-position: 50% 50%;
     background-repeat: no-repeat;
