--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2666,6 +2666,8 @@ body {
     background-image: url(../assets/img/landing/word_map.png);
     background-position: 50% 50%;
     background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
   }
   section {
     &.timeline {
