--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2667,7 +2667,7 @@ body {
     background-position: 50% 50%;
     background-repeat: no-repeat;
     width: 100%;
-    height: 100%;
+    height: 400px;
   }
   section {
     &.timeline {
