--- a/_includes/sections/links.html
+++ b/_includes/sections/links.html
@@ -1,4 +1,11 @@
-<div class="container contact-area" id="i18_link">
+<div class="container contact-area lozad" id="i18_link"
+    data-background-image="/static/assets/img/landing/word_map.png"
+    style="
+        background-position: 50% 50%;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 400px;">
+
     <div class="row m-b-lg">
         <div class="col-lg-12 text-center">
             <div class="navy-line"></div>
