--- a/_includes/sections/links.html
+++ b/_includes/sections/links.html
@@ -3,7 +3,7 @@
     style="
         background-position: 50% 50%;
         background-repeat: no-repeat;
-        width: 800px;
+        width: auto;
         height: 400px;">
 
     <div class="row m-b-lg">
