--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2817,7 +2817,7 @@ body {
   font-style: normal;
   font-weight: 400;
   font-display:swap;src: url(webfonts/fa-brands-400.eot);
-  src: url(webfonts/fa-brands-400.eot?#iefix) format("embedded-opentype"),url(webfonts/fa-brands-400.woff2) format("woff2"),url(webfonts/fa-brands-400.woff) format("woff"),url(webfonts/fa-brands-400.ttf) format("truetype"),url(webfonts/fa-brands-400.svg#fontawesome) format("svg")
+  src: url(../assets/fonts/fa-brands-400.eot?#iefix) format("embedded-opentype"),url(../assets/fonts/fa-brands-400.woff2) format("woff2"),url(../assets/fonts/fa-brands-400.woff) format("woff"),url(../assets/fonts/fa-brands-400.ttf) format("truetype"),url(../assets/fonts/fa-brands-400.svg#fontawesome) format("svg")
 }
 
 // Fix Google Chrome audit "Ensure text remains visible during webfont load"
@@ -2826,7 +2826,7 @@ body {
   font-style: normal;
   font-weight: 400;
   font-display:swap;src: url(webfonts/fa-regular-400.eot);
-  src: url(webfonts/fa-regular-400.eot?#iefix) format("embedded-opentype"),url(webfonts/fa-regular-400.woff2) format("woff2"),url(webfonts/fa-regular-400.woff) format("woff"),url(webfonts/fa-regular-400.ttf) format("truetype"),url(webfonts/fa-regular-400.svg#fontawesome) format("svg")
+  src: url(../assets/fonts/fa-regular-400.eot?#iefix) format("embedded-opentype"),url(../assets/fonts/fa-regular-400.woff2) format("woff2"),url(../assets/fonts/fa-regular-400.woff) format("woff"),url(../assets/fonts/fa-regular-400.ttf) format("truetype"),url(../assets/fonts/fa-regular-400.svg#fontawesome) format("svg")
 }
 
 // Fix Google Chrome audit "Ensure text remains visible during webfont load"
@@ -2834,6 +2834,6 @@ body {
   font-family: 'Font Awesome 5 Free';
   font-style: normal;
   font-weight: 900;
-  font-display:swap;src: url(webfonts/fa-solid-900.eot);
-  src: url(webfonts/fa-solid-900.eot?#iefix) format("embedded-opentype"),url(webfonts/fa-solid-900.woff2) format("woff2"),url(webfonts/fa-solid-900.woff) format("woff"),url(webfonts/fa-solid-900.ttf) format("truetype"),url(webfonts/fa-solid-900.svg#fontawesome) format("svg")
+  font-display:swap;src: url(../assets/fonts/fa-solid-900.eot);
+  src: url(../assets/fonts/fa-solid-900.eot?#iefix) format("embedded-opentype"),url(../assets/fonts/fa-solid-900.woff2) format("woff2"),url(../assets/fonts/fa-solid-900.woff) format("woff"),url(../assets/fonts/fa-solid-900.ttf) format("truetype"),url(../assets/fonts/fa-solid-900.svg#fontawesome) format("svg")
 }
