--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2816,7 +2816,7 @@ body {
   font-family: 'Font Awesome 5 Brands';
   font-style: normal;
   font-weight: 400;
-  font-display:swap;src: url(webfonts/fa-brands-400.eot);
+  font-display:swap;src: url(../assets/fonts/fa-brands-400.eot);
   src: url(../assets/fonts/fa-brands-400.eot?#iefix) format("embedded-opentype"),url(../assets/fonts/fa-brands-400.woff2) format("woff2"),url(../assets/fonts/fa-brands-400.woff) format("woff"),url(../assets/fonts/fa-brands-400.ttf) format("truetype"),url(../assets/fonts/fa-brands-400.svg#fontawesome) format("svg")
 }
 
@@ -2825,7 +2825,7 @@ body {
   font-family: 'Font Awesome 5 Free';
   font-style: normal;
   font-weight: 400;
-  font-display:swap;src: url(webfonts/fa-regular-400.eot);
+  font-display:swap;src: url(../assets/fonts/fa-regular-400.eot);
   src: url(../assets/fonts/fa-regular-400.eot?#iefix) format("embedded-opentype"),url(../assets/fonts/fa-regular-400.woff2) format("woff2"),url(../assets/fonts/fa-regular-400.woff) format("woff"),url(../assets/fonts/fa-regular-400.ttf) format("truetype"),url(../assets/fonts/fa-regular-400.svg#fontawesome) format("svg")
 }
 
