--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1,4 +1,4 @@
-$link-color: #0569FF;
+$link-color: #0064FA;
 $success-color: #1c84c6;
 $warning-color: #f8ac59;
 $active-color1: #0073b1;
@@ -1155,7 +1155,6 @@ label.error {
 }
 
 .vertical-date small {
-  color: $link-color;
   font-weight: 400;
 }
 
