--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,14 +27,18 @@ layout: compress
 
 
   <!-- Main scripts -->
-  <script src="{{ "/static/assets/app-20190620.min.js" | prepend: site.baseurl }}"></script>
+  <script src="{{ "/static/assets/app-20190621.min.js" | prepend: site.baseurl }}"></script>
   {% if site.data.index.projects %}
   <script async defer src="{{ "/static/js/github_api.min.js" | prepend: site.baseurl }}"></script>
   {% endif %}
   {% if site.data.index.language %}
-  <script src="{{"/static/assets/i18-20190620.min.js"| prepend: site.baseurl }}"></script>
+  <script src="{{"/static/assets/i18-20190621.min.js"| prepend: site.baseurl }}"></script>
   {% endif %}
   <script src="{{"/static/js/skills.js"| prepend: site.baseurl }}"></script>
+
+  <!-- Main CSS -->
+  <link href="{{ "/static/assets/app-20190621.min.css" | prepend: site.baseurl }}" rel="stylesheet">
+  <link href="{{ "/static/css/custom.css" | prepend: site.baseurl }}" rel="stylesheet">
 
 </body>
 </html>
