--- a/_includes/sections/projects.html
+++ b/_includes/sections/projects.html
@@ -18,7 +18,7 @@
             <div class="col-sm-6 wow {% if loopindex == 1 %} fadeInLeft {% else %} fadeInRight {% endif %}">
             {% endif %}
               <div class="team-member">
-                  <img data-src="{{ project.img | prepend: site.baseurl }}" class="lozad img-responsive img-circle img-small" alt="">
+                  <img data-src="{{ project.img | prepend: site.baseurl }}" class="lozad img-fluid rounded-circle img-small" alt="">
                   <h4>
                   {% if project.url %}
                   <a href="{{ project.url }}" target="_blank" rel="noopener"><span class="navy">{{ project.name }}</span></a>
