--- a/_sass/_head.scss
+++ b/_sass/_head.scss
@@ -260,7 +260,7 @@ body.canvas-menu .nav-header {
   }
 }
 
-.btn-default {
+.btn-secondary {
   &.active, &:active {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15) inset;
   }
@@ -343,7 +343,7 @@ body.canvas-menu .nav-header {
   background-color: $white;
 }
 
-.has-error .form-control:focus, .has-success .form-control:focus, .has-warning .form-control:focus, .navbar-collapse, .navbar-form {
+.form-control:focus, .form-control:focus, .form-control:focus, .navbar-collapse, .navbar-form {
   box-shadow: none;
 }
 
