--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -189,7 +189,7 @@ button.dim {
   }
 }
 
-.btn-default {
+.btn-secondary {
   color: inherit;
   background: $white;
   border: 1px solid $light-gray1;
@@ -207,7 +207,7 @@ button.dim {
   }
 }
 
-.btn-default {
+.btn-secondary {
   &.active {
     color: inherit;
     border: 1px solid #d2d2d2;
@@ -385,7 +385,7 @@ button {
       box-shadow: inset 0 0 0 #16987e, 0 2px 0 0 #16987e, 0 5px 3px #999;
     }
   }
-  &.btn-default.dim {
+  &.btn-secondary.dim {
     box-shadow: inset 0 0 0 #b3b3b3, 0 5px 0 0 #b3b3b3, 0 10px 5px #999;
     &:active {
       box-shadow: inset 0 0 0 #b3b3b3, 0 2px 0 0 #b3b3b3, 0 5px 3px #999;
@@ -546,30 +546,6 @@ button.dim:active:before {
   &:focus {
     border-color: $link-color !important;
   }
-}
-
-.has-success .form-control {
-  border-color: $link-color;
-}
-
-.has-warning .form-control {
-  border-color: $warning-color;
-}
-
-.has-error .form-control {
-  border-color: #ed5565;
-}
-
-.has-success .col-form-label {
-  color: $link-color;
-}
-
-.has-warning .col-form-label {
-  color: $warning-color;
-}
-
-.has-error .col-form-label {
-  color: #ed5565;
 }
 
 .author-info {
