--- a/_includes/category.html
+++ b/_includes/category.html
@@ -30,7 +30,7 @@ $(function(){
             {% for post in site.categories[category] %}
             {% assign counter = counter | plus: 1 %}
             <li>
-                <div class="col-lg-8 col-lg-offset-2">
+                <div class="col-lg-8 offset-lg-2">
                     <div class="ibox">
                         <div class="ibox-content">
                             <a href="{{ post.url | prepend: site.baseurl }}" class="btn-link">
