--- a/_includes/sections/links.html
+++ b/_includes/sections/links.html
@@ -17,9 +17,9 @@
         {% assign loopindex = forloop.index | modulo: 3 %}
         {% if forloop.last %}
             {% if forloop.last == forloop.first %}
-        <div class="col-sm-4 col-sm-offset-4 wow zoomIn">
+        <div class="col-sm-4 offset-sm-4 wow zoomIn">
                 {% else %}
-        <div class="col-sm-4 wow {% if loopindex != 0 %} col-sm-offset-4 fadeInRight {% else %} zoomIn {% endif %}">
+        <div class="col-sm-4 wow {% if loopindex != 0 %} offset-sm-4 fadeInRight {% else %} zoomIn {% endif %}">
             {% endif %}
         {% else %}
         <div class="col-sm-4 wow {% if loopindex == 1 %} fadeInLeft {% else if loopindex == 2 %} zoomIn {% else %} fadeInRight {% endif %}">
@@ -38,7 +38,7 @@
     {% endfor %}
     </div>
     <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
+        <div class="col-lg-8 offset-lg-2 text-center m-t-lg m-b-lg">
             <p id="jalpc_site_pv"><strong>&copy; {{ 'now' | date: "%Y" }} {{ site.title }}</strong></p>
         </div>
     </div>
