--- a/_includes/blog_header.html
+++ b/_includes/blog_header.html
@@ -25,15 +25,15 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a class="page-scroll" href="{{ "blog/" | prepend: site.baseurl }}">{{ site.index.home }}</a></li>
+                    <li class="nav-item"><a class="nav-link page-scroll" href="{{ "blog/" | prepend: site.baseurl }}">{{ site.index.home }}</a></li>
                     {% for tag in site.data.blog %}
                         {% if tag.name != 'Donate' or site.donation %}
                         {% if page.title == tag.name %}
-                        <li class="active">
+                        <li class="nav-item active">
                         {% else %}
                         <li>
                         {% endif %}
-                        <a class="page-scroll" href="{{ tag.href | prepend: site.baseurl }}">{{ tag.name }}</a></li>
+                        <a class="nav-link page-scroll" href="{{ tag.href | prepend: site.baseurl }}">{{ tag.name }}</a></li>
                         {% endif %}
                     {% endfor %}
                 </ul>
