--- a/_sass/_head.scss
+++ b/_sass/_head.scss
@@ -321,7 +321,7 @@ body.canvas-menu .nav-header {
   padding: 40px 0;
 }
 
-.navbar-toggle {
+.navbar-toggler {
   background-color: $link-color;
   color: $white;
   padding: 6px 12px;
@@ -681,7 +681,7 @@ body.canvas-menu .nav-header {
     .navbar .navbar-header {
       display: block;
       float: none;
-      .navbar-toggle {
+      .navbar-toggler {
         background-color: $white;
         padding: 9px 10px;
         border: none;
