--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -344,7 +344,7 @@ button.dim {
   }
 }
 
-.panel {
+.card {
   box-shadow: none;
 }
 
@@ -925,7 +925,7 @@ label.error {
   }
 }
 
-.panel.blank-panel {
+.card.blank-panel {
   background: 0 0;
   margin: 0;
 }
