--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -41,11 +41,11 @@
         {% endfor %}
 
     </div>
-    <!--<a class="carousel-item-left carousel-control" href="#inSlider" role="button" data-slide="carousel-item-prev">
+    <!--<a class="carousel-item-left carousel-control" href="#inSlider" role="button" data-slide="carousel-control-prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-item-right carousel-control" href="#inSlider" role="button" data-slide="carousel-item-next">
+    <a class="carousel-item-right carousel-control" href="#inSlider" role="button" data-slide="carousel-control-next">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
